demo/discourse.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server
  labels:
    app: web-server
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: web-server
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
      - name: web-server
        image: jansudev/discourse-for-m1:test
        command: ["/sbin/boot"]
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: 1
            memory: 2Gi
        imagePullPolicy: Always
        volumeMounts:
        - name: discourse-storage
          mountPath: /shared
      volumes:
      - name: discourse-storage
        persistentVolumeClaim:
          claimName: local-storage-sharedssd
