demo/ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: discourse-ingress
spec:
  rules:
  - host: www.dbnest.net
    http:
      paths:
      - backend:
          serviceName: web-server
          servicePort: 80
  tls:
  - hosts:
    - www.dbnest.net
